--- a/TelefQuito_Server/01.SERVIDOR/TELFQUITO_SOAP_JAVA/pom.xml
+++ b/TelefQuito_Server/01.SERVIDOR/TELFQUITO_SOAP_JAVA/pom.xml
@@ -32,6 +32,22 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version> <!-- Ajusta a la versión requerida -->
         </dependency>
+        <dependency>
+    <groupId>jakarta.xml.ws</groupId>
+    <artifactId>jakarta.xml.ws-api</artifactId>
+    <version>4.0.0</version>
+</dependency>
+<dependency>
+    <groupId>jakarta.xml.bind</groupId>
+    <artifactId>jakarta.xml.bind-api</artifactId>
+    <version>3.0.1</version>
+</dependency>
+<dependency>
+    <groupId>org.glassfish.jaxb</groupId>
+    <artifactId>jaxb-runtime</artifactId>
+    <version>3.0.1</version>
+</dependency>
+        
 
     </dependencies>
     
