--- a/TelefQuito_Server/02.CLIMOV/app/src/main/AndroidManifest.xml
+++ b/TelefQuito_Server/02.CLIMOV/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".view.FacturasActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.CarritoActivity"
             android:exported="false" />
         <activity
