--- a/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/nbproject/project.properties
+++ b/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/nbproject/project.properties
@@ -1,7 +1,13 @@
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_args=
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_file=server.js
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
+browser.run=true
 file.reference.TELFQUITO_SOAP_JAVA_CLIWEB-public=public
 files.encoding=UTF-8
 site.root.folder=${file.reference.TELFQUITO_SOAP_JAVA_CLIWEB-public}
 source.folder=
+start.file=index.html
+web.context.root=/TELFQUITO_SOAP_JAVA_CLIWEB
