--- a/TelefQuito_Server/02.CLICON/TELFQUITO_SOAP_JAVA_CLICON/pom.xml
+++ b/TelefQuito_Server/02.CLICON/TELFQUITO_SOAP_JAVA_CLICON/pom.xml
@@ -31,7 +31,7 @@
             </goals>
             <configuration>
                 <wsdlUrls>
-                    <wsdlUrl>	http://localhost:8080/TELFQUITO_SOAP_JAVA/WSLogin?wsdl</wsdlUrl>
+                    <wsdlUrl>	http://192.168.8.83:8080/TELFQUITO_SOAP_JAVA/WSLogin?wsdl</wsdlUrl>
                 </wsdlUrls>
                 <packageName>ec.edu.monster.ws</packageName>
                 <vmArgs>
@@ -49,7 +49,7 @@
             </goals>
             <configuration>
                 <wsdlUrls>
-                    <wsdlUrl>	http://localhost:8080/TELFQUITO_SOAP_JAVA/WSCompra?wsdl</wsdlUrl>
+                    <wsdlUrl>	http://192.168.8.83:8080/TELFQUITO_SOAP_JAVA/WSCompra?wsdl</wsdlUrl>
                 </wsdlUrls>
                 <packageName>ec.edu.monster.ws</packageName>
                 <vmArgs>
@@ -67,7 +67,7 @@
             </goals>
             <configuration>
                 <wsdlUrls>
-                    <wsdlUrl>http://localhost:8080/TELFQUITO_SOAP_JAVA/WSTelefonos?wsdl</wsdlUrl>
+                    <wsdlUrl>http://192.168.8.83:8080/TELFQUITO_SOAP_JAVA/WSTelefonos?wsdl</wsdlUrl>
                 </wsdlUrls>
                 <packageName>ec.edu.monster.ws</packageName>
                 <vmArgs>
